# lab07

./: .env  .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  LICENSE  LICENSE.rtf  README.md  docker-compose.yml  main.py
.github/workflows/: ci.yml  release.yml
db/: init.sql
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.hpp
formatter_lib/: formatter.cpp  formatter.hpp
hello_world_application/: hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp  solver.cpp
tests/: test_formatter.cpp  test_solver.cpp
